# zkLoRA

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: ci.yml
benchmarks/: native_v3_results.md  run_benchmarks.py  sigma_v4_results.md
docs/: protocol-projection-v1.md
src/: Cargo.toml  README.md  commitment.rs  lib.rs  lookup_constraint.rs  nf4_field.rs  pyproject.toml  requirements.txt
src/examples/: bench_prove.rs
src/scripts/: base_model_user_sample_script.py  lora_contributor_sample_script.py  verify_proofs.py
src/src/: lib.rs  logup.rs  sigma.rs
src/zklora/: __init__.py  activations_commit.py  fp_coding.py  lora_onnx_exporter.py  mpi_lora_onnx_exporter.py  plonky3_prove_verify.py  polynomial_commit.py  proof_contract.py  proof_v3.py  strategy.md  zk_proof_generator.py
src/zklora/base_model_user_mpi/: __init__.py
src/zklora/libs/: Cargo.toml
src/zklora/libs/plonky3/: Cargo.toml
src/zklora/libs/plonky3/src/: lib.rs  vector_matrix_air.rs
src/zklora/lora_contributor_mpi/: __init__.py
tests/: integration_test.rs  test_legacy_and_hardening.py  test_multi_contributor.py  test_native_extension.py  test_native_fast_paths.py  test_poly_commit.py  test_v3_artifacts.py  test_zklora_proof_contract.py
