[package]
name = "zklora-native-prover"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native_prover"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
blake3 = "1"
halo2_proofs = "0.3.2"
halo2_gadgets = "0.5"
ff = "0.13"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
pyo3 = { version = "0.28.3", optional = true }
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
