[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "zklora"
version = "0.2"
authors = [
    { name = "Bagel", email = "team@bagel.net" },
]
description = "A Python library for zero-knowledge proof generation and verification"
readme = "../readme.md"  # Update path to point to root README
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "blake3>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/bagel-org/zklora"
"Bug Tracker" = "https://github.com/bagel-org/zklora/issues"

[tool.maturin]
features = ["extension-module"]
python-source = "."
module-name = "zklora._native_prover"
