[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "zklora"
version = "0.2"
authors = [
    { name = "Bagel", email = "team@bagel.net" },
]
description = "A Python library for zero-knowledge proof generation and verification"
readme = "../readme.md"  # Update path to point to root README
# Floor matches actual usage: PEP 604 unions evaluated at import time in
# lora_contributor_mpi require 3.10+, and pathlib.Path.is_relative_to
# requires 3.9+. CI exercises 3.11.
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.4.0",
    "blake3>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/bagel-org/zklora"
"Bug Tracker" = "https://github.com/bagel-org/zklora/issues"

[tool.maturin]
features = ["extension-module"]
python-source = "."
module-name = "zklora._native_prover"
